# zkconsent

./: .gitignore  .gitmodules  README.md  batchbuild.sh  batchclean.sh  batchinit.sh  batchzk.sh  batchzkgroth16.sh  batchzkprove_ghr13.sh  batchzkprove_groth16.sh  batchzkprove_pghr13.sh  batchzksetup_groth16.sh  batchzksetup_pghr13.sh  build.sh  deltemp.sh  sample_zeth_dump.txt
eth-gas/: .gitignore  app.js  notes.txt  package-lock.json  package.json  read_gas_base.js  read_gas_dump.js  read_gas_stats.js
eth-gas/data/: ETH_EUR.csv  ETH_EUR.xlsx  zkp_cost.xlsx
nodegw/: binding.gyp  package.json  test.js
nodegw/src/: snark2node.cc  snark_node_obj.cpp  snark_node_obj.h
samples/: zkconfconsent_other.json  zkconfirm.json  zkconfterminate.json  zkconfterminate_other.json  zkconsent.json  zkconsent_other.json  zkmint.json  zkmint_other.json  zkterminate.json  zkterminate_other.json
snarks/: .gitignore  CMakeLists.txt
snarks/depends/: CMakeLists.txt
snarks/snarkhlp/: CMakeLists.txt  prfxxx.cpp
snarks/src/: CMakeLists.txt  main.cpp  prfxxx.hpp
snarks/test/: CMakeLists.txt  main.cpp
snarks/zkconsent/: CMakeLists.txt  clientdefs.hpp  cmd_snark.cpp  cmd_test.cpp  main.cpp  zkjson.cpp  zkjson.hpp  zkjson.tcc  zksnarkstream.hpp
snarks/zkconsenthlp/: CMakeLists.txt  cm_extra_gadgets.hpp  cm_extra_gadgets.tcc  extra_cm_gadgets.hpp  extra_cm_gadgets.tcc  extra_consent_gadgets.hpp  extra_consent_gadgets.tcc  extra_id_gadgets.hpp  extra_id_gadgets.tcc  extra_note_gadgets.hpp  extra_note_gadgets.tcc  extra_note_types.hpp  extra_prf_gadgets.hpp  extra_prf_gadgets.tcc  extra_study_gadgets.hpp  extra_study_gadgets.tcc  prf_extra_gadgets.hpp  prf_extra_gadgets.tcc  prfxxx.cpp  prfxxx.hpp  zkc_cm.cpp  zkc_cm.hpp  zkc_helpers.cpp  zkc_helpers.hpp  zkc_interface.cpp  zkc_interface.hpp  zkc_mktree.cpp  zkc_mktree.hpp  zkc_notes.hpp  zkc_params.hpp  zkc_prf.cpp  zkc_prf.hpp  zkproof_confconsent.hpp  zkproof_confconsent.tcc  zkproof_confirm.hpp  zkproof_confirm.tcc  zkproof_confterminate.hpp  zkproof_confterminate.tcc  zkproof_consent.hpp  zkproof_consent.tcc  (+10 more)
tests/blake2s/: .gitignore  Notes.txt  package-lock.json  package.json  test.js
verifier/: truffle-config.js
verifier/contracts/: BN128_Libraries.sol  VerifiyPGHR13.sol
verifier/groth16_hlp/: _playground.py  convertproof.py  convertvk.py  pairing.py  test_pairing.py  test_zksnark.py  utils.py  zksnark.py
verifier/migrations/: 2_deploy_contracts.js
verifier/test/: test01_verify_pghr13.js
verifier/verifier_contract/: .gitignore
verifier/verifier_contract/contracts/: VerifyGroth16.sol  VerifyPGHR13.sol
verifier/verifier_contract/migrations/: 2_deploy_pghr13.js  3_deploy_groth16.js
verifier/verifier_contract/test/: test01_verify_pghr13.js  test01_zkconsent_pghr13.js  test02_verify_groth16.js  test02_zkconsent_groth16.js  test03_zeth_groth16.js
zeth_tests/: bin2hex.sh  readme_zeth.txt  readme_zkconsent.txt
zeth_tests/proofs/: commands.txt  exproof_burn.json  exproof_burn2.json  exproof_burn2_params.json  exproof_burn_params.json  exproof_mint.json  exproof_mint2.json  exproof_mint2_params.json  exproof_mint_params.json  exproof_tx.json  exproof_tx2.json  exproof_tx2_params.json  exproof_tx_params.json
zeth_tests/vk/: vk_zeth.json  vk_zeth_params.json
zkconsentjs/: binding.gyp  package-lock.json  package.json  test.js
zkconsentjs/src/: snark2node.cc  snark_node_obj.cpp  snark_node_obj.h
